# kube-cost-intergration

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
kubecost_integration/: __init__.py  core.py
tests/: __init__.py  test_core.py
